[package]
name = "synner"
version = "0.1.1"
authors = ["Juxhin Dyrmishi Brigjaj <juxhinbox@gmail.com>"]
license = "MIT"
license-file = "LICENSE"
homepage = "https://blog.digital-horror.com/synner-a-tcp-syn-client-written-in-rust/"
description = "A TCP SYN flood client written in Rust, powered by libpnet"
repository = "https://github.com/JuxhinDB/synner"

[dependencies]
pnet = "0.21.0"
pnet_base = "0.21.0"
pnet_datalink = "0.21.0"
pnet_packet = "0.21.0"
pnet_transport = "0.21.0"
rand = "0.3.15"
